--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
     
 
  <!--JQUERY-->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!--BOOTSTRAP-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!--HIGHCHARTS-->
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src = "https://code.highcharts.com/modules/data.js"></script>
 <!--DATA TABLES-->
 <script src = "https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 <!--MY SCRIPTS-->
